--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,9 +4,12 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.4.2",
+    "google-maps-react": "^2.0.2",
+    "leaflet": "^1.5.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-google-login": "^5.0.5",
+    "react-leaflet": "^2.4.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
