--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "google-maps-react": "^2.0.2",
     "leaflet": "^1.5.1",
     "react": "^16.9.0",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.9.0",
     "react-google-login": "^5.0.5",
     "react-leaflet": "^2.4.0",
+    "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
