--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.9.0",
     "react-google-login": "^5.0.5",
+    "react-google-maps-loader": "^4.2.5",
+    "react-google-places-suggest": "^3.8.0",
     "react-leaflet": "^2.4.0",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.0.1",
